<resources>
    <string name="app_name">Project_Gestor</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="register">Register</string>
    <string name="nombre_del_lenguaje">Nombre del lenguaje</string>
    <string name="guardar_lenguaje">Guardar Lenguaje</string>
    <string name="nombre_del_proyecto">Nombre del proyecto</string>
    <string name="descripci_n">Descripción</string>
    <string name="prioridad_1_5">Prioridad (1-5)</string>
    <string name="horas_estimadas">Horas estimadas</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="guardar_proyecto">Guardar Proyecto</string>
    <string name="login">Login</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="lenguaje_kotlin">Lenguaje: Kotlin</string>
    <string name="a_adir_lenguaje">Añadir Lenguaje</string>
    <string name="a_adir_proyecto">Añadir Proyecto</string>
    <string name="prioridad_1">Prioridad: 1</string>
    <string name="project_language">Lenguaje: %1$s</string>
    <string name="project_priority">Prioridad: %1$d</string>
    <string name="unknown_language">Lenguaje desconocido</string>
    <string name="ingrese_prioridad_1_5">Ingrese prioridad (1-5)</string>
    <string name="ingrese_horas_estimadas">Ingrese horas estimadas</string>
    <string name="ingrese_descripci_n_del_proyecto">Ingrese descripción del proyecto</string>
    <string name="ingrese_nombre_del_proyecto">Ingrese nombre del proyecto</string>
    <string name="lenguaje">Lenguaje:</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="borrar">Borrar</string>
</resources>