<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_include"
            layout="@layout/toolbar_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_project_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/lenguaje"
            android:textSize="16sp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar_include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Nombre del Proyecto -->
        <TextView
            android:id="@+id/tv_project_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_proyecto"
            app:layout_constraintTop_toBottomOf="@id/tv_project_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:textStyle="bold" />

        <!-- Lenguaje de Programación -->


        <EditText
            android:id="@+id/et_project_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_nombre_del_proyecto"
            app:layout_constraintTop_toBottomOf="@id/tv_project_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp" />



        <!-- Descripción -->
        <TextView
            android:id="@+id/tv_project_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n"
            app:layout_constraintTop_toBottomOf="@id/et_project_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_project_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_descripci_n_del_proyecto"
            app:layout_constraintTop_toBottomOf="@id/tv_project_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp" />

        <!-- Horas Estimadas -->
        <TextView
            android:id="@+id/tv_project_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/horas_estimadas"
            app:layout_constraintTop_toBottomOf="@id/et_project_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_project_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_horas_estimadas"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/tv_project_hours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp" />

        <!-- Prioridad -->
        <TextView
            android:id="@+id/tv_project_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prioridad_1_5"
            app:layout_constraintTop_toBottomOf="@id/et_project_hours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_project_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_prioridad_1_5"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/tv_project_priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp" />



        <!-- Botón Guardar Cambios -->
        <Button
            android:id="@+id/btn_update_project"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guardar_cambios"
            app:layout_constraintTop_toBottomOf="@id/et_project_priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="48dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
