<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/nombre_del_proyecto" />

        <TextView
            android:id="@+id/tv_project_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#555555"
            android:text="@string/lenguaje_kotlin" />

        <TextView
            android:id="@+id/tv_project_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#555555"
            android:text="@string/prioridad_1" />
        <Button
            android:id="@+id/btn_delete_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:backgroundTint="@color/red"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

