<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <!-- Toolbar -->
    <include
        android:id="@+id/toolbar_include"
        layout="@layout/toolbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_include"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="32sp"
        android:fontFamily="monospace"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="48sp"
        android:hint="@string/usuario"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:layout_marginHorizontal="48sp"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/registrar"
        android:layout_marginHorizontal="48sp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
